# cozynet

./: .gitignore  README.md  seed.txt
.github/workflows/: static.yml
cozydev/: README.md  app.js  index.html  style.css
cozynet/: app.js  index.html  style.css
docs/: cozynet.drawio
fungicide/: README.md  pyproject.toml
fungicide/classifier/: README.md  pyproject.toml  train.py
fungicide/filter/: README.md  main.py  pyproject.toml
fungicide/inhibitor/: main.py  pyproject.toml
fungicide/src/: fungicide.py
fungicide/src/train/: train.ipynb  train.py
greenhouse/: main.py
mycelium/: Makefile  README.md  go.mod  go.sum
mycelium/cmd/app/: app.go  init.go  main.go
mycelium/cmd/mycelium/: init.go  main.go  seed.go
mycelium/cmd/util/: main.go
mycelium/internal/cache/: cache.go  item.go  item.pb.go  item.proto  queue.go  visited.go
mycelium/internal/chooser/: proxyChooser.go  userAgentChooser.go
mycelium/internal/crawler/: constants.go  crawler.go  page.go
mycelium/internal/data/: blacklist.txt  clean.py  seed.txt
mycelium/internal/redis/: item.go  item.pb.go  item.proto  queue.go  redis.go  visited.go
mycelium/internal/redisq/: item.pb.go  item.proto  redisq.go
services/cozynet/: CNAME  about.html  app.js  index.html  style.css
services/greenhouse/: pyproject.toml
services/mycelium/: go.mod
services/taxonomist/: pyproject.toml
services/taxonomist/src/: __init__.py  cli.py  database.py
taxonomist/: .env.example  README.md  main.py  schema.sql
taxonomist/src/: config.py  indexer.py  models.py
(+10 files in other folders)
