[project]
name = "greenhouse"
version = "0.1.0"
description = "REST API for querying the CozyNet search engine database"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0"
]
